--- a/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
@@ -1,22 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wagner.avocado.SignUpFarmerAddPhotos">
-
-    <Button
-        android:id="@+id/signUpSetLocationSkipButton"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="62dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Skip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    tools:context="com.example.wagner.avocado.SignUpFarmerAddProfile">
 
     <Button
         android:id="@+id/signUpFarmerAddPhotosBackButton"
@@ -30,13 +19,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signUpFarmerAddPhotosNextButton"
+        android:id="@+id/signUpFarmerAddPhotosFinishButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Next"
+        android:text="Finish"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -46,7 +35,7 @@
         android:layout_height="134dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="28dp"
-        android:text="Would you like to add photos of your farm or crops?"
+        android:text="Would you like to add a profile picture?"
         android:textAlignment="center"
         android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,4 +61,5 @@
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
+
 </android.support.constraint.ConstraintLayout>
