--- a/app/src/main/res/layout/activity_sign_up_set_location_transporter.xml
+++ b/app/src/main/res/layout/activity_sign_up_set_location_transporter.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.wagner.avocado.SignUpSetLocation">
 
+    <Button
+        android:id="@+id/signUpSetLocationSkipButton"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="62dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Skip"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
@@ -60,10 +72,10 @@
 
     <EditText
         android:id="@+id/country"
-        android:layout_width="wrap_content"
+        android:layout_width="126dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Country"
         android:inputType="textPersonName"
@@ -86,7 +98,7 @@
 
     <EditText
         android:id="@+id/postalcode"
-        android:layout_width="124dp"
+        android:layout_width="83dp"
         android:layout_height="43dp"
         android:layout_marginStart="72dp"
         android:layout_marginTop="8dp"
@@ -98,8 +110,8 @@
 
     <EditText
         android:id="@+id/city"
-        android:layout_width="217dp"
-        android:layout_height="46dp"
+        android:layout_width="213dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -107,6 +119,7 @@
         android:hint="City"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addressline2" />
 
@@ -117,7 +130,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:hint="Where is your farm?"
+        android:hint="Where is your home?"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,16 +160,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <Button
-        android:id="@+id/signUpSetLocationSkipButton"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="62dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Skip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
